crates/ty_python_semantic/resources/mdtest/snapshots/super.md_-_Super_-_Basic_Usage_-_Implicit_Super_Objec…_(f9e5e48e3a4a4c12).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: super.md - Super - Basic Usage - Implicit Super Object
mdtest path: crates/ty_python_semantic/resources/mdtest/class/super.md
---

# Python source files

## mdtest_snippet.py

```
  1 | from __future__ import annotations
  2 | 
  3 | class A:
  4 |     def __init__(self, a: int): ...
  5 |     @classmethod
  6 |     def f(cls): ...
  7 | 
  8 | class B(A):
  9 |     def __init__(self, a: int):
 10 |         reveal_type(super())  # revealed: <super: <class 'B'>, B>
 11 |         reveal_type(super(object, super()))  # revealed: <super: <class 'object'>, super>
 12 |         super().__init__(a)
 13 | 
 14 |     @classmethod
 15 |     def f(cls):
 16 |         # TODO: Once `cls` is supported, this should be `<super: <class 'B'>, <class 'B'>>`
 17 |         reveal_type(super())  # revealed: <super: <class 'B'>, Unknown>
 18 |         super().f()
 19 | 
 20 | super(B, B(42)).__init__(42)
 21 | super(B, B).f()
 22 | import enum
 23 | from typing import Any, Self, Never, Protocol, Callable
 24 | from ty_extensions import Intersection
 25 | 
 26 | class BuilderMeta(type):
 27 |     def __new__(
 28 |         cls: type[Any],
 29 |         name: str,
 30 |         bases: tuple[type, ...],
 31 |         dct: dict[str, Any],
 32 |     ) -> BuilderMeta:
 33 |         # revealed: <super: <class 'BuilderMeta'>, Any>
 34 |         s = reveal_type(super())
 35 |         # revealed: Any
 36 |         return reveal_type(s.__new__(cls, name, bases, dct))
 37 | 
 38 | class BuilderMeta2(type):
 39 |     def __new__(
 40 |         cls: type[BuilderMeta2],
 41 |         name: str,
 42 |         bases: tuple[type, ...],
 43 |         dct: dict[str, Any],
 44 |     ) -> BuilderMeta2:
 45 |         # revealed: <super: <class 'BuilderMeta2'>, <class 'BuilderMeta2'>>
 46 |         s = reveal_type(super())
 47 |         # revealed:  BuilderMeta2
 48 |         return reveal_type(s.__new__(cls, name, bases, dct))
 49 | 
 50 | class Foo[T]:
 51 |     x: T
 52 | 
 53 |     def method(self: Any):
 54 |         reveal_type(super())  # revealed: <super: <class 'Foo'>, Any>
 55 | 
 56 |         if isinstance(self, Foo):
 57 |             reveal_type(super())  # revealed: <super: <class 'Foo'>, Any>
 58 | 
 59 |     def method2(self: Foo[T]):
 60 |         # revealed: <super: <class 'Foo'>, Foo[T@Foo]>
 61 |         reveal_type(super())
 62 | 
 63 |     def method3(self: Foo):
 64 |         # revealed: <super: <class 'Foo'>, Foo[Unknown]>
 65 |         reveal_type(super())
 66 | 
 67 |     def method4(self: Self):
 68 |         # revealed: <super: <class 'Foo'>, Foo[T@Foo]>
 69 |         reveal_type(super())
 70 | 
 71 |     def method5[S: Foo[int]](self: S, other: S) -> S:
 72 |         # revealed: <super: <class 'Foo'>, Foo[int]>
 73 |         reveal_type(super())
 74 |         return self
 75 | 
 76 |     def method6[S: (Foo[int], Foo[str])](self: S, other: S) -> S:
 77 |         # revealed: <super: <class 'Foo'>, Foo[int]> | <super: <class 'Foo'>, Foo[str]>
 78 |         reveal_type(super())
 79 |         return self
 80 | 
 81 |     def method7[S](self: S, other: S) -> S:
 82 |         # error: [invalid-super-argument]
 83 |         # revealed: Unknown
 84 |         reveal_type(super())
 85 |         return self
 86 | 
 87 |     def method8[S: int](self: S, other: S) -> S:
 88 |         # error: [invalid-super-argument]
 89 |         # revealed: Unknown
 90 |         reveal_type(super())
 91 |         return self
 92 | 
 93 |     def method9[S: (int, str)](self: S, other: S) -> S:
 94 |         # error: [invalid-super-argument]
 95 |         # revealed: Unknown
 96 |         reveal_type(super())
 97 |         return self
 98 | 
 99 |     def method10[S: Callable[..., str]](self: S, other: S) -> S:
100 |         # error: [invalid-super-argument]
101 |         # revealed: Unknown
102 |         reveal_type(super())
103 |         return self
104 | 
105 | type Alias = Bar
106 | 
107 | class Bar:
108 |     def method(self: Alias):
109 |         # revealed: <super: <class 'Bar'>, Bar>
110 |         reveal_type(super())
111 | 
112 |     def pls_dont_call_me(self: Never):
113 |         # revealed: <super: <class 'Bar'>, Unknown>
114 |         reveal_type(super())
115 | 
116 |     def only_call_me_on_callable_subclasses(self: Intersection[Bar, Callable[..., object]]):
117 |         # revealed: <super: <class 'Bar'>, Bar>
118 |         reveal_type(super())
119 | 
120 | class P(Protocol):
121 |     def method(self: P):
122 |         # revealed: <super: <class 'P'>, P>
123 |         reveal_type(super())
124 | 
125 | class E(enum.Enum):
126 |     X = 1
127 | 
128 |     def method(self: E):
129 |         match self:
130 |             case E.X:
131 |                 # revealed: <super: <class 'E'>, E>
132 |                 reveal_type(super())
```

# Diagnostics

```
error[invalid-super-argument]: `S@method7` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method7)` call
  --> src/mdtest_snippet.py:84:21
   |
82 |         # error: [invalid-super-argument]
83 |         # revealed: Unknown
84 |         reveal_type(super())
   |                     ^^^^^^^
85 |         return self
   |
info: Type variable `S` has `object` as its implicit upper bound
info: `object` is not an instance or subclass of `<class 'Foo'>`
help: Consider adding an upper bound to type variable `S`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method8` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method8)` call
  --> src/mdtest_snippet.py:90:21
   |
88 |         # error: [invalid-super-argument]
89 |         # revealed: Unknown
90 |         reveal_type(super())
   |                     ^^^^^^^
91 |         return self
   |
info: Type variable `S` has upper bound `int`
info: `int` is not an instance or subclass of `<class 'Foo'>`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method9` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method9)` call
  --> src/mdtest_snippet.py:96:21
   |
94 |         # error: [invalid-super-argument]
95 |         # revealed: Unknown
96 |         reveal_type(super())
   |                     ^^^^^^^
97 |         return self
   |
info: Type variable `S` has constraints `int, str`
info: `int | str` is not an instance or subclass of `<class 'Foo'>`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method10` is a type variable with an abstract/structural type as its bounds or constraints, in `super(<class 'Foo'>, S@method10)` call
   --> src/mdtest_snippet.py:102:21
    |
100 |         # error: [invalid-super-argument]
101 |         # revealed: Unknown
102 |         reveal_type(super())
    |                     ^^^^^^^
103 |         return self
    |
info: Type variable `S` has upper bound `(...) -> str`
info: rule `invalid-super-argument` is enabled by default

```
